@@ -1,3 +1,5 @@
+    - fixed: generate new OAuth authorization hearder on retry (RetryOnError trait)
+
 3.13001 2010-11
     - use POST with Authorization header for XAuth (per Twitter documentation)
     - replace homegrown XAuth support with Net::OAuth's native support
